<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weekvalue"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:textColor="@color/black"
        android:background="@color/lightblue"
        android:paddingRight="8dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/daily_grade"
            android:padding="4dp"
            android:src="@drawable/dg" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dg"
                android:textColor="@color/orange"/>
            <TextView
                android:id="@+id/tvGrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/a"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>